src/Server/k8s/deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basket-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: basket-api
    spec:
      containers:
      - image: jurabek/basket
        imagePullPolicy: Always
        name: basket-api
        ports:
        - containerPort: 5200
        resources:

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: identity-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      containers:
      - name: identity-api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        image: jurabek/identity
        resources:

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: menu-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: menu-api
    spec:
      containers:
      - name: menu-api
        image: jurabek/menu
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
        
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: order-api
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - image: jurabek/order
        imagePullPolicy: Always
        name: order-api
        ports:
          - containerPort: 8090
        resources:


---
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 8090
        #   initialDelaySeconds: 10
        #   timeoutSeconds: 5
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 8090
        #   initialDelaySeconds: 10
        #   timeoutSeconds: 5
        #   periodSeconds: 10
