src/Server/k8s/pgsql-data.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pgsql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgsql
    spec:
      containers:
      - env:
        - name: PGDATA
          value: /pg
        - name: POSTGRES_DB
          value: orderdb
        - name: POSTGRES_PASSWORD
          value: Passw0rd!
        - name: POSTGRES_USER
          value: admin
        image: postgres:alpine
        name: pgsql
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: database-data
      restartPolicy: Always
      volumes:
      - name: database-data
        persistentVolumeClaim:
          claimName: database-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgsql
  name: pgsql-data
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pgsql
