src/Server/k8s/redis-data.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: basket-cache
    spec:
      containers:
      - image: redis:alpine
        name: cache-data
        resources:

---
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basket-cache
  name: pgsql-data
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pgsql
