src/Server/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: frontend
  name: restaurant-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
spec:
  rules:
  - host:
  - http:
      paths:
      - path: /menu
        backend:
          serviceName: menu-api
          servicePort: 80
      - path: /basket
        backend:
          serviceName: basket-api
          servicePort: 80
      - path: /identity
        backend:
          serviceName: identity-api
          servicePort: 80
      - path: /order
        backend:
          serviceName: order-api
          servicePort: 80
